ajuste de responsividade

--- a/src/styles/components/informationcontainer.sass
+++ b/src/styles/components/informationcontainer.sass
@@ -45,3 +45,8 @@
 
         #pin-icon
             color: #c17ceb
+
+        @media ( max-width: 720px )
+            #pin-icon, #email-icon, #phone-icon
+                display: none
+            
