--- a/src/styles/routes/Project.sass
+++ b/src/styles/routes/Project.sass
@@ -1,11 +1,18 @@
 @use '../variables'
 @use '../mixins'
 
+.swiper-pagination-fraction, .swiper-pagination-custom, .swiper-horizontal > .swiper-pagination-bullets, .swiper-pagination-bullets.swiper-pagination-horizontal
+    display: none
+    
+@media ( max-width: 720px )
+    .swiper-button-prev:after, .swiper-button-next:after
+        display: none
+
 .imagem
     height: 10rem
     margin-bottom: 1rem
 
-.swiper-button-next:after 
+.swiper-button-next:after
     margin-left: 1rem
 
 .swiper-button-prev:after
@@ -61,8 +68,11 @@
         padding: 5px 50px
         background: linear-gradient(to right, #727272, #333333 )
         transition: .5
-    
+
     .back:hover
         padding: 8px 55px
         font-weight: bold
         background: linear-gradient(to left, #727272, #333333)
+
+.card-project .container
+        margin-bottom: 1rem
